--- a/resume.tex
+++ b/resume.tex
@@ -118,7 +118,7 @@
 
 %----------HEADING-----------------
 
-\textbf{\huge Daniel Brito} \\ 
+\textbf{\LARGE Daniel Brito} \\ 
 \vspace{0.1cm} % Space between sections
 \textbf{Software Engineer • Visual Artist • Writer} \\
 \vspace{0.3cm} % Space between sections
@@ -129,10 +129,10 @@
     \faEnvelope{\hspace{0.2cm}\href{mailto:danielhbrito@outlook.com}{danielhbrito@outlook.com}} & \hspace{0.45cm}
     \faLinkedin{\hspace{0.2cm}\href{https://www.linkedin.com/in/daniel-brito}{daniel-brito}} & \hspace{0.45cm}
     \faGlobe{\hspace{0.2cm}\href{https://danielbrito.github.io}{danielbrito.github.io}} & \hspace{0.45cm}
-    \faPaperPlane{\hspace{0.2cm}\href{https://t.me/danielhbrito}{danielhbrito}}
+    \faGithub{\hspace{0.2cm}\href{https://github.com/DanielBrito}{DanielBrito}}
 \end{tabular}
 
-\vspace{0.5cm} % Space between sections
+\vspace{0.2cm} % Space between sections
 
 % Justifying all the content:
 \justify
@@ -140,7 +140,7 @@
 %--------PROFILE------------
 \section{\faUser \hspace{0.2cm} \Large Profile}
 
-Software engineer with 4\texttt{+} years of experience, passionate about challenges that involve learning, sharing knowledge, and creating things, both in the fields of Art and Technology. Currently, having a greater interest in topics related to Software Architecture.
+Product-minded software engineer with 5\texttt{+} years of experience building scalable, high-impact solutions using Kotlin, Spring Framework, AWS, Kafka, and microservices. Known for taking ownership, solving complex problems, and quickly adapting to new challenges, with a track record of boosting operational efficiency and delivering measurable business results. Passionate about sharing knowledge and creating at the intersection of Art and Technology.
 
 \vspace{0.3cm} % Space between sections
 
@@ -150,58 +150,39 @@ Software engineer with 4\texttt{+} years of experience, passionate about challen
     \resumeSubHeadingListStart
         \resumeSubheading
         {Software Engineer}{\faCalendar \hspace{0.1cm} Apr 2021 - Currently}
-        {OSF Digital}{\faMapMarker \hspace{0.1cm} Québec, CA - Remote}
+        {OSF Digital}{\faMapMarker \hspace{0.1cm} Quebec, Canada - Remote}
+
+        \vspace{0.3cm}
+
+        \textit{Working as a software consultant on the development of products related to finance and innovation within high-performing teams from big companies and start-ups such as Caixa, Porto Seguro and Creditas.}
+
+        \vspace{-0.2cm}
+        
         \begin{itemize}
-            \item Development of web and mobile applications within high-performing teams from big companies and startups such as Caixa, Porto Seguro, and Creditas, mainly related to finance and innovation.
+            \item Developed and maintained event-driven microservices for customer collection, recovering millions of reais monthly from overdue loans, using Kotlin, Spring Framework, PostgreSQL, Kafka, AWS, Docker, GitHub, Datadog, TDD, BDD, and DDD.
+            \item Proactively developed internal troubleshooting tools with Redash, Python, JavaScript, and low-code platforms, anticipating needs and reducing issue resolution time for operational and development teams.
+            \item Enhanced legacy customer collection system by implementing targeted optimizations, using TypeScript, ReactJS, GraphQL, Flagsmith, Datadog, TDD, BFF, and MFEs, improving operational throughput and management.
+            \item Awarded Junior Top Performer for delivering high-quality proofs of concept under tight deadlines, built with ReactJS, Leaflet, and AWS tools such as Lambda, API Gateway, DynamoDB, Cognito, Kinesis, IAM, and Amplify. 
+            \begin{itemize}
+                \item Migrated vehicle auction operations from several spreadsheets to a web-based management platform, improving efficiency and reducing manual errors.
+                \item Built a real-time flood monitoring platform that improved vehicle rescue logistics for insurance clients, decreasing response times.
+                \item Developed a Flutter app to evaluate authentication mechanisms using a Java-based SDK from a security vendor, streamlining evaluation of secure login options.
+            \end{itemize}
         \end{itemize}
+
+        \vspace{0.1cm}
     \resumeSubHeadingListEnd
-    
-    \vspace{-0.2cm}
-    
+
+%-----------EDUCATION-----------------
+\section{\faGraduationCap \hspace{0.2cm} \Large Education}
+
     \resumeSubHeadingListStart
         \resumeSubheading
-        {Research Assistant Intern}{\faCalendar \hspace{0.1cm} Feb 2022 - Apr 2022}
-        {Laboratory of Studies and Research in Social Economics (LEPES/USP)}{\faMapMarker \hspace{0.1cm} Ribeirão Preto, SP - Remote}
-        
-        \begin{itemize}
-            \item Developed a web platform addressing the issue ``enhancing the use and interpretation of data'' proposed during the HackPI - Hackathon for the First Childhood, performing data analysis from CSV files and plotting charts with more understandable results to help identify and implement public policy programs.
-        \end{itemize}
-    \resumeSubHeadingListEnd
-    
-    \vspace{-0.2cm}
-
-    \resumeSubHeadingListStart
-        \resumeSubheading
-        {Software Developer Intern}{\faCalendar \hspace{0.1cm} Jan 2020 - Dec 2020}
-        {ASTEF Foundation}{\faMapMarker \hspace{0.1cm} Fortaleza, CE - Remote}
-        
-        \begin{itemize}
-            \item Developed web and mobile applications to optimize the patient admission process at Pró-Hemoce Institute. Some features include user management, notifications, an image gallery, a chatbot, and the generation of reports. Despite the affinity to learn front-end subjects, there was also a contact with concepts and tools related to UI/UX Design, back-end, and DevOps, as well as some agile methodologies principles.
-        \end{itemize}
-
-        \vspace{0.1cm} % Space between sections
+        {B.S. Computer Science \href{http://lattes.cnpq.br/6587136026055239}{\scriptsize \faExternalLink}}{\faCalendar \hspace{0.1cm} 2017 - 2021}
+        {Federal University of Ceará (UFC)}{\faMapMarker \hspace{0.1cm} Crateús, CE, Brazil}
     \resumeSubHeadingListEnd
 
-%--------SKILLS------------
-\section{\faPuzzlePiece \hspace{0.2cm} \Large Skills \& Interests}
-
-    Knowledge acquired while \textit{working as a software engineer}, besides other topics from a personal study guide. \href{https://github.com/DanielBrito/self-learning}{\scriptsize \faExternalLink}
-    
-    \resumeSubHeadingListStart
-        \resumeSubItem {Programming Languages:}{\textit{Kotlin}, \textit{JavaScript/TypeScript}, Java, C\texttt{++}, Python, Dart, Processing, C.}
-        \resumeSubItem {Front-end:}{\textit{HTML}, \textit{CSS}, \textit{ReactJS}, Styled Components, Material UI, Bootstrap.}
-        \resumeSubItem {Back-end:}{\textit{Spring Framework}, \textit{AWS}, \textit{Kafka}, \textit{Flyway}, \textit{GraphQL}, \textit{PostgreSQL}, \textit{JWT}, \textit{NodeJS}, Firebase.}
-        \resumeSubItem {Mobile:}{Android, Flutter, React Native.}
-        \resumeSubItem {Testing:} {\textit{JUnit}, \textit{AssertJ}, \textit{MockK}, \textit{WireMock}, \textit{Localstack}, \textit{React Testing Library}, \textit{Jest}, \textit{SonarQube}, Cypress.}
-        \resumeSubItem {Monitoring:} {\textit{Datadog}, \textit{Opsgenie}, \textit{Amazon CloudWatch}, New Relic, Kibana.}        
-        \resumeSubItem {DevOps:}{\textit{Git}, \textit{GitHub}, \textit{Docker}, CircleCI, Azure, GitLab.}
-        \resumeSubItem {Tools:}{\textit{IntelliJ IDEA}, \textit{VS Code}, \textit{DBeaver}, \textit{Postman}, \textit{Jira}, \textit{Redash}, \textit{Flagsmith}, Split.io.}
-        \resumeSubItem {Design:}{Figma, Photoshop, Adobe XD, Inkscape, Blender, Balsamiq.}
-        \resumeSubItem {Subjects:}{\textit{Software Architecture}, \textit{Design Patterns}, \textit{TDD}, \textit{DDD}, \textit{Data Structures}, \textit{Kanban}, \textit{UML}, Scrum, UI/UX.}
-        \resumeSubItem {Soft Skills:}{\textit{Communication}, \textit{teamwork}, \textit{organization}, \textit{time management}, \textit{creativity}, \textit{critical thinking}.}
-        
-        \vspace{0.6cm} % Space between section
-    \resumeSubHeadingListEnd
+    \vspace{0.04cm} % Space between sections
 
 %--------LANGUAGES------------
 \section{\faComments \hspace{0.2cm} \Large Languages}
@@ -213,95 +194,26 @@ Software engineer with 4\texttt{+} years of experience, passionate about challen
     \textbf{French:} A1 Beginner
 \end{tabular}
 
-% \vspace{0.7cm} % Space between sections
-
-%-----------EDUCATION-----------------
-\section{\faGraduationCap \hspace{0.2cm} \Large Education}
-
-    \resumeSubHeadingListStart
-        \resumeSubheading
-        {B.S. Computer Science \href{http://lattes.cnpq.br/6587136026055239}{\scriptsize \faExternalLink}}{\faCalendar \hspace{0.1cm} 2017 - 2021}
-        {Federal University of Ceará (UFC)}{\faMapMarker \hspace{0.1cm} Crateús, CE}
-        \begin{itemize}
-            \item \textbf{Scholarships}
-                \begin{itemize}
-                    \resumeScholarship
-                    {Program for Beginning Teachers:}{}
-                    {Academic mentoring for IT and engineering students using C and Python.}{}
-            
-                    \resumeScholarship
-                    {Program of Academic Initiation:}{}
-                    {Practical studies of 3D modeling and Virtual Reality using Blender.}{}
-
-                    \resumeScholarship
-                    {Program of Academic Initiation:}{}
-                    {Front-end development of educational platform using Semantic UI and AngularJS.}{}
-                \end{itemize}
-        \end{itemize}
-        
-        \vspace{-0.2cm}
-      
-        \begin{itemize}
-            \item \textbf{Volunteer}
-                \begin{itemize}
-                    \item \textbf{GEMP/CRT:} Study group for the SBC Programming Marathon. \href{https://github.com/GEMP-UFC-Crateus}{\scriptsize \faExternalLink}
-                    \item \textbf{Fire Tasks:} Workshop to build a task manager with ReactJS and Firestore. \href{https://github.com/DanielBrito/fire-tasks}{\scriptsize \faExternalLink}
-                    \item \textbf{Chess Club:} Helping the students to develop their mental skills.
-                \end{itemize}
-        \end{itemize}
-
-        \vspace{0.05cm} % Space between sections
-    \resumeSubHeadingListEnd
-
-%-----------PROJECTS-----------------
-\section{\faRocket \hspace{0.2cm} \Large Projects}
-
-    \resumeSubHeadingListStart
-        \resumeSubItem{Technology}{}
-            \begin{itemize}
-                \item \textbf{HáLugar:} Android app to help students share housing, built with Java, Google Maps, and Firebase. \href{https://youtu.be/9wHZYrn7aEE}{\scriptsize \faExternalLink}
-                \item \textbf{Dissertation:} Procedural modeling based on Selection Expressions with Blender and Python. \href{https://github.com/DanielBrito/monografia}{\scriptsize \faExternalLink}
-                \item \textbf{Compixelar:} Development of multimedia experiments using p5.js and Processing. \href{https://medium.com/@danielhbrito}{\scriptsize \faExternalLink}
-            \end{itemize}
-            
-        \resumeSubItem{Education}{}
-            \begin{itemize}
-                \item \textbf{sTuring:} Scientific divulgation of topics related to Computing. \href{https://www.instagram.com/sturing.compsci/}{\scriptsize \faExternalLink}
-                \item \textbf{YouTube Channel:}  Programming tutorials for beginners. \href{https://www.youtube.com/channel/UC4y3uq1d7MKDYs1LbI44Vng}{\scriptsize \faExternalLink}
-            \end{itemize}
-            
-        \resumeSubItem{Arts}{}
-            \begin{itemize}
-                \item \textbf{Aluminions:} Creation of characters using aluminum seals. \href{https://www.instagram.com/aluminions.13/}{\scriptsize \faExternalLink}
-                \item \textbf{Fanzines:} Electronic publication of poems. \href{https://drive.google.com/drive/folders/0BwdGPIUP6mG3dEl6cmRvWGJ6TzQ}{\scriptsize \faExternalLink}
-            \end{itemize}
-
-            \vspace{0.1cm} % Space between sections
-    \resumeSubHeadingListEnd
+\vspace{0.3cm} % Space between sections
 
 %-----------AWARDS-----------------
 \section{\faTrophy \hspace{0.2cm} \Large Awards}
     \resumeSubHeadingListStart
-        \resumeSubItem{CEO Awards - Rising Star:}{Recognition for the remarkable work performed at OSF Digital as a Software Developer.}
+        % \resumeSubItem{CEO Awards - Rising Star:}{Recognition for the remarkable work performed at OSF Digital as a Software Developer.}
         
-        \vspace{-0.2cm}
+        % \vspace{-0.2cm}
         
-        \resumeSubItem{Champion at HackPI Ceará:}{Hackathon promoted by the Federal University of Ceará (UFC) and the State Education Department (SEDUC) along with the University of São Paulo (USP), in which the participants should think of ways to address the issue of ``enhancing the use and interpretation of data''.}
-        
-        \vspace{0.2cm}
-        
-        \resumeSubItem{First Place at FIT.ON:}{Hackathon promoted by the Federal University of Ceará (UFC) during the Innovation and Technology Forum, in which the participants should think of solutions to connect small farmers to the market.}
+        \resumeSubItem{Champion at HackPI Ceará:}{Hackathon promoted by the Federal University of Ceará (UFC), the State Education Department (SEDUC), and the University of São Paulo (USP), where participants should think of ways to address the issue of ``enhancing the use and interpretation of data''.}
         
         \vspace{0.2cm}
         
-        \resumeSubItem{Best IT Work at University Meetings:}{Project ``Practical studies of 3D modeling and Virtual Reality using Blender'', which shows application of these concepts in digital art, animation, architecture, and game development.}
+        \resumeSubItem{First Place at FIT.ON:}{Hackathon promoted by the Federal University of Ceará (UFC) during the Innovation and Technology Forum, where participants should think of solutions to connect small farmers to the market.}
         
         \vspace{0.5cm}
     \resumeSubHeadingListEnd
 
 %-----------OTHER INTERESTS-----------------
-\section{\faThumbsUp \hspace{0.2cm} \Large Hobbies}
-
-    Generative design, art, astronomy, philosophy, literature, mathematics, history, poetry, music, cinema, chess, calisthenics, running, skateboarding, cycling, gaming, traveling, researching, and blogging.
+% \section{\faThumbsUp \hspace{0.2cm} \Large Hobbies}
+%     Generative design, art, astronomy, philosophy, literature, mathematics, history, poetry, music, cinema, gaming, traveling, researching, blogging, and sports such as running, cycling, swimming, calisthenics, and chess.
 %-------------------------------------------
 \end{document}
